--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@trevoreyre/autocomplete-js": "^2.2.0",
+    "@trevoreyre/autocomplete-vue": "^2.2.0",
+    "autocomplete-vue": "^1.1.0",
     "axios": "^0.21.0",
+    "buefy": "^0.9.4",
     "bulma": "^0.9.1",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
@@ -19,6 +23,10 @@
     "vue-cookies": "^1.7.4",
     "vue-moment": "^4.1.0",
     "vue-router": "^4.0.0-0",
+    "vue-select": "^3.10.8",
+    "vue-simple-suggest": "^1.10.3",
+    "vue3-autocomplete": "^1.0.0",
+    "vuejs-auto-complete": "^0.9.0",
     "vuex": "^4.0.0-rc.1"
   },
   "devDependencies": {
